<resources>
    <string name="app_name">BinaMurid</string>
    <string name="masukkan_nama_kamu">Masukkan Nama Kamu</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_kata_sandi">Masukkan Kata Sandi</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="content_description_end_icon">content_description_end_icon</string>

    <string name="title_home">Home</string>
    <string name="title_dailyreport">Daily Report</string>
    <string name="title_history">History</string>
    <string name="title_akun">Akun</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>