<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:background="@color/biru"
                android:gravity="center">


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/bg_gradasi"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="Register"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hitampudar"
                    android:textSize="@dimen/_20sdp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="@dimen/_23sdp"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="Silakan daftar terlebih dahulu"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/hitampudar"
                    android:textSize="@dimen/_10sdp"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:id="@+id/linearlayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="20dp"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_akun">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textNama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/masukkan_nama_kamu"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/masukkan_email"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            />

                    </com.google.android.material.textfield.TextInputLayout>

                    <RelativeLayout
                        android:id="@+id/txvphone"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_36sdp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@drawable/bg_btn_lapisanabu">

                        <ImageView
                            android:id="@+id/imvphone"
                            android:layout_width="@dimen/_18sdp"
                            android:layout_height="@dimen/_18sdp"
                            android:layout_marginStart="@dimen/_9sdp"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:layout_marginEnd="@dimen/_13sdp"
                            android:src="@drawable/ic_baseline_phone_24"
                            app:tint="@color/Abuabuhitam" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@+id/imvphone"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:layout_marginEnd="@dimen/_1sdp"
                                android:gravity="center"
                                android:text="+62"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_11sdp" />

                            <EditText
                                android:id="@+id/edit_phone1"
                                android:layout_width="match_parent"
                                android:layout_height="40dp"
                                android:layout_marginTop="@dimen/_2sdp"
                                android:layout_marginEnd="3dp"
                                android:layout_toEndOf="@+id/imvphone"
                                android:background="@color/white"
                                android:hint="No Telpone"
                                android:inputType="number"
                                android:maxLength="13"
                                android:textSize="@dimen/_11sdp" />

                        </LinearLayout>

                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:fontFamily="@font/quicksand_bold"
                        android:text="Pilih Gender" />

                    <RadioGroup
                        android:id="@+id/radio_JK"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="L" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="P" />

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_baseline_location_on_24">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textALamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/masukkan_alamat"
                            android:inputType="textEmailAddress"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_lock_black_24dp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/kata_sandi"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        app:counterEnabled="true"
                        app:counterMaxLength="16"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:passwordToggleEnabled="true"
                        app:startIconContentDescription="@string/content_description_end_icon"
                        app:startIconDrawable="@drawable/ic_lock_black_24dp">


                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edit_textKonfirmasiPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/konfirmasi_kata_sandi"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:maxLength="16" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:background="@drawable/bg_gradasiatasabawah"
                        android:text="Register"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/biru" />

                    <ProgressBar
                        android:id="@+id/progresbarregis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>