<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/biru"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_500sdp"
        android:layout_weight="1"
        android:background="@color/biru"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:src="@drawable/teacher" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_gradasi"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/quicksand_medium"
            android:text="Login"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_20sdp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="@dimen/_23sdp"
            android:fontFamily="@font/quicksand_medium"
            android:text="Masukkan email dan kata sandimu"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/hitampudar"
            android:textSize="@dimen/_10sdp"
            tools:ignore="MissingConstraints" />

        <LinearLayout
            android:id="@+id/linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_baseline_email_24">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:inputType="textEmailAddress"
                    android:lines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                app:counterEnabled="true"
                app:counterMaxLength="16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:startIconContentDescription="@string/content_description_end_icon"
                app:startIconDrawable="@drawable/ic_lock_black_24dp">


                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_kata_sandi"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="Belum Punya akun??"/>

                <TextView
                    android:id="@+id/txtlupapassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="end"
                    android:text="Lupa Password??"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/Labeldaftar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:text="Daftar," />

                <TextView
                    android:id="@+id/text_viewRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/Labeldaftar"
                    android:text="Klik Disini"
                    android:textColor="@color/biru" />
            </RelativeLayout>

            <Button
                android:id="@+id/btnLoginuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:background="@drawable/bg_gradasiatasabawah"
                android:text="Login"
                android:textColor="@color/white"
                app:backgroundTint="@color/biru" />

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>